@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-02T16:08:39Z",
+  "timestamp" : "2022-04-03T00:36:12Z",
   "count_outdated" : 546,
   "uniques_outdated" : 35,
-  "count" : 886,
+  "count" : 898,
   "uniques" : 48,
   "views" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 0, 16 ],
+      "count": 28,
+      "count_minmax": [ 0, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
