@@ -1,3 +1,9 @@
+2022-04-03T00:36:12Z:
+* notice: last 14d: all unq: 352 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 886 48
+* notice: next accum: outdated-all outdated-unq / all unq: 546 35 / 898 48
+* notice: prev json diff // prev day diff: unq all: +0 +12 / -0 -0 // +0 +12 / -0 -0
+
 2022-04-02T16:08:39Z:
 * notice: last 14d: all unq: 340 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 882 48
